<resources>
    <string name="app_name">FILE DOCKER</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in_act_title">Log in</string>
    <string name="login_txt_user">User Name</string>
    <string name="login_txt_pass">Password</string>
    <string name="login_btn">"Log in "</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="btn_register">Register</string>
    <string name="register_btn_back_login">Log In</string>
    <string name="ed_retype_your_password">Retype Your Password</string>
    <string name="create_account_title">Create Account</string>
    <string name="btn_cancel">Cancel</string>
    <string name="change_password_btn">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset</string>
    <string name="setting_title">Setting</string>
    <string name="your_profile_title">Your Profile</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="txt_tmp">User Name</string>
    <string name="follower_txt">Follower</string>
    <string name="subcriber_txt">Subcriber</string>
    <string name="email_txt_tmp">email@mail.com</string>
    <string name="update_email_notifi">Please update your email to reset password</string>
    <string name="btn_change_pass">Change password</string>
    <string name="logout_txt">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grant_permission_title">Grant permision for use application feature</string>
    <string name="allow_txt">Allow</string>
    <string name="notification_request_description">Access to notifications is needed to receiver important event.</string>
    <string name="notification_access">Notification Access</string>
    <string name="camera_access">Camera Access</string>
    <string name="external_storage_access">External Storage Access</string>
    <string name="external_storate_description">Allows you to select and store files on your device so they can be sent to the server for processing.</string>
    <string name="internet_access_description">Your device needs to be connected to the Internet via Wi-Fi to use the file transfer feature</string>
    <string name="camera_access_descript">This app requires access to the camera to use the feature to extract information from photos</string>
    <string name="home_frm_title">Home</string>
    <string name="global_frm_title">Global</string>
    <string name="follow_frm_title">Follow</string>
    <string name="notification_frm_title">Notification</string>
    <string name="profile_menu_item">Profile</string>
    <string name="setting_menu_item">Setting</string>
    <string name="logout_menu_item">Logout</string>
    <string name="trash_bin_menu_item">Trash bin</string>
    <string name="private_file_txt">Private</string>
    <string name="public_file_txt">Public</string>
    <string name="config_dialog_title">Config</string>
    <string name="is_table_description">"If your file contains tables, please check 'Table'."</string>
    <string name="is_table_selection">Table</string>
    <string name="btn_ok">Ok</string>
    <string name="is_public_description">If you want to public this file data</string>
    <string name="is_public_selection">Public</string>
    <string name="reminder_input_name_file">Title: </string>
    <string name="reminder_input_title">Input title</string>
    <!--    <string name="see_more_comments"><u>See more comments</u></string>-->
    <string name="comments">%1$s Comments</string>
    <string name="upvote">%1$s Like</string>
    <string name="comments_count_txt">%1$s comments</string>
    <string name="like">Like</string>
    <string name="more_content">Read more</string>
    <string name="read_more_content">%1$s ...More</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="answer_to">answer to @<font color="#3586F6">%1$s</font></string>
    <string name="input_your_reply">Input your reply</string>
    <string name="upload">upload</string>
    <string name="image_avatar">Image avatar</string>
    <string name="people_who_liked_this_file">People who liked this file</string>
    <string name="view_detail">View detail</string>
    <string name="stop_sharing">Stop sharing</string>
    <string name="delete_file">Delete file</string>
    <string name="turn_off_notification">Turn off notification</string>
    <string name="view_file_detail">view file detail</string>
    <string name="public_or_private_this_file">Public or private this file</string>
    <string name="on_off_notification">on/off notification</string>
    <string name="back">back</string>
    <string name="action_follow">Follow</string>
    <string name="comment">Comment</string>
    <string name="like_count">like count</string>
    <string name="download_original_file">Download original file</string>
    <string name="comment_">Comment</string>
    <string name="msg_permission_request_template">Please granted the permission access external storage to use application feature</string>
    <string name="img_find">img find</string>
    <string name="you_follow_n_people">You follow 5 people</string>
    <string name="follow_count">%1$s follow</string>
    <string name="followers_count">%1$s followers</string>
    <string name="action_hind">action hind</string>
    <string name="recommend">Recommend</string>
    <string name="search">Search...</string>
    <string name="notification">Notification</string>
    <string name="gmail">Gmail</string>
    <string name="input_your_email">Input your email</string>
    <string name="network_connected">Network connected</string>
    <string name="network_disconnected">Network disconnected</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
</resources>