<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/menu_item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_menu_item" />
        <item
            android:id="@+id/menu_item_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting_menu_item" />
        <item
            android:id="@+id/menu_item_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/trash_bin_menu_item" />
    </group>
    <group>
        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_menu_item" />
    </group>
</menu>