<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:id="@+id/btnDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="5dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:src="@drawable/ic_view_detail"
            android:contentDescription="@string/view_file_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:text="@string/view_detail"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnChangeState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="5dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:src="@drawable/ic_share_1"
            android:contentDescription="@string/public_or_private_this_file" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:text="@string/stop_sharing"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="5dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:src="@drawable/ic_follow"
            android:contentDescription="@string/on_off_notification" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:text="@string/turn_off_notification"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="5dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:src="@drawable/ic_delete_1"
            android:contentDescription="@string/delete_file" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:text="@string/delete_file"/>
    </LinearLayout>

</LinearLayout>