<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.user.fogetpass.FogetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/lilita_one"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/lilita_one"
        android:layout_marginTop="80dp"
        android:text="Reset password"/>

    <TextView
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:background="@drawable/bg_edt"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/login_txt_user"
        android:padding="20dp"
        android:textColorHint="#5F6368"
        tools:layout_editor_absoluteX="13dp" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/bg_edt"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="30dp"
        android:hint="@string/new_password"
        android:padding="20dp"
        android:textColorHint="#5F6368"
        tools:layout_editor_absoluteX="13dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtRetypePass"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/bg_edt"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="30dp"
        android:hint="@string/ed_retype_your_password"
        android:padding="20dp"
        android:textColorHint="#5F6368"
        tools:layout_editor_absoluteX="13dp"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogInGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/btn_cancel"
        android:textColor="#5F6368" />

</LinearLayout>