<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.setting.ProfileAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="40dp">

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/ic_back"
            android:padding="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textSize="30sp"
            android:fontFamily="@font/lilita_one"
            android:gravity="center"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/your_profile_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_avatar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_tmp"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:fontFamily="@font/lilita_one"
        android:gravity="center_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp">
        
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_follower"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/lilita_one"
            android:textSize="24sp"
            android:text="@string/follower_txt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_subscribe"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/lilita_one"
            android:textSize="24sp"
            android:text="@string/subcriber_txt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_email_1"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/lilita_one"
            android:textSize="24sp"
            android:text="@string/email_txt_tmp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update_email_notifi"
        android:layout_marginHorizontal="40dp"
        android:textColor="#5F6368" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_password_1"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/lilita_one"
            android:textSize="24sp"
            android:text="@string/btn_change_pass"/>

    </LinearLayout>
    
</LinearLayout>